[package]
name = "ignite-rs"
version = "0.1.0"
authors = ["Andrii Pohrebniak <andrii.pohrebniak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bufstream = "0.1.4"

[dependencies.rustls]
version = "0.17.0"
optional = true

[dependencies.webpki]
version = "0.21.3"
optional = true

[features]
default = []
ssl = ["rustls", "webpki"]
