[package]
name = "ignite-rs"
version = "0.1.0"
authors = ["Andrii Pohrebniak <andrii.pohrebniak@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Apache Ignite thin client"
homepage = "https://github.com/apohrebniak/ignite-rs"
documentation = "https://github.com/apohrebniak/ignite-rs"
repository = "https://github.com/apohrebniak/ignite-rs"
readme = "https://github.com/apohrebniak/ignite-rs/blob/master/README.md"
keywords = ["ignite", "apache ignite", "client", "ignite client"]
categories = ["database"]

[dependencies]
bufstream = "0.1.4"

[dependencies.rustls]
version = "0.17.0"
optional = true

[dependencies.webpki]
version = "0.21.3"
optional = true

[features]
default = []
ssl = ["rustls", "webpki"]
