[package]
name = "ignite-rs_derive"
version = "0.1.0"
authors = ["Andrii Pohrebniak <a.pohrebniak@gethatch.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Apache Ignite thin client"
homepage = "https://github.com/apohrebniak/ignite-rs"
documentation = "https://github.com/apohrebniak/ignite-rs"
repository = "https://github.com/apohrebniak/ignite-rs"
readme = "https://github.com/apohrebniak/ignite-rs/blob/master/README.md"
keywords = ["ignite", "apache ignite", "client", "ignite client"]
categories = ["database"]

[lib]
proc-macro = true

[dependencies]
syn = "1.0.29"
quote = "1.0.6"
proc-macro2 = "1.0.18"